@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/embedded/embedded-chroot.sh,v 1.16 2005/07/05 21:53:41 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/embedded/embedded-chroot.sh,v 1.17 2005/11/29 20:30:42 wolf31o2 Exp $
 
 . /tmp/chroot-functions.sh
 
@@ -17,7 +17,7 @@ setup_myemergeopts
 export FEATURES="${clst_myfeatures}"
 export CONFIG_PROTECT="-*"
 #export clst_myemergeopts="${clst_myemergeopts} -O"
-export USE="${clst_embedded_use}"
+export USE="${clst_use}"
 export DESTROOT=${clst_root_path}
 export clst_root_path=/
 ## START BUILD
